--- a/public/email_template/order.html
+++ b/public/email_template/order.html
@@ -18,19 +18,19 @@
                     <!-- Receipt Paper Overlay Container -->
                     <table role="presentation" width="100%" border="0" cellspacing="0" cellpadding="0">
                         <tr>
-                            <td align="center" style="padding-top: 180px;">
+                            <td align="center" style="padding-top: 220px;">
                                 <div
-                                    style="background-image: url('{{base_api_url}}/public/email_artifacts/reciept_paper.png'); background-size: contain; background-repeat: no-repeat; background-position: center top; width: 380px; min-height: 480px; margin: 0 auto; border:none; box-sizing: border-box;">
+                                    style="background-image: url('{{base_api_url}}/public/email_artifacts/reciept_paper.png'); background-size: contain; background-repeat: no-repeat; background-position: center top; width: 380px; min-height: 520px; margin: 0 auto; border:none; box-sizing: border-box;">
 
                                     <!-- Slanted Text Content inside the Receipt -->
                                     <div
-                                        style="transform: rotate(-6deg); transform-origin: center center; width: 240px; margin: 0 auto; padding-top: 110px; padding-left: 30px; font-family: 'Caveat', 'Comic Sans MS', cursive, sans-serif; font-size: 18px; color: #000099; text-align: left;">
+                                        style="transform: rotate(-6deg); transform-origin: center center; width: 300px; margin: 0 auto; padding-top: 110px; padding-left: 20px; font-family: 'Caveat', 'Comic Sans MS', cursive, sans-serif; font-size: 18px; color: #000099; text-align: left;">
 
                                         <p
                                             style="margin: 0 0 5px; font-size: 24px; font-weight: bold; padding-left: 10px;">
                                             Hi {{user_name}}!</p>
 
-                                        <div style="margin-left: 10px; margin-bottom: 10px;">
+                                        <div style="margin-left: 10px; margin-bottom: 15px;">
                                             <p style="margin: 0 0 2px; font-weight: bold;">Order: {{order_id}}</p>
                                             <p style="margin: 0 0 2px; font-weight: bold;">Date: {{friendly_date}}</p>
                                         </div>
@@ -40,13 +40,13 @@
                                         </table>
 
                                         <div
-                                            style="margin-top: 10px; text-align: right; font-size: 20px; font-weight: bold; margin-right: 10px;">
+                                            style="margin-top: 15px; text-align: right; font-size: 22px; font-weight: bold; margin-right: 10px;">
                                             Total: ₹{{amount}}
                                         </div>
 
                                         <p
-                                            style="margin-top: 20px; text-align: center; font-size: 18px; font-weight: bold; padding-left: 10px;">
-                                            Thank you shopping!
+                                            style="margin-top: 25px; text-align: center; font-size: 18px; font-weight: bold; padding-right: 20px;">
+                                            Thank you for shopping!
                                         </p>
                                     </div>
                                 </div>
